// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> Snapshots should match the snapshot when <Slider /> is disabled 1`] = `
.c2 {
  border-radius: 4px;
  font-weight: bold;
  opacity: 0;
  position: absolute;
  line-height: 0;
  text-align: center;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #424242;
  border-color: #424242;
  color: #f2f2f2;
  font-size: 16px;
  padding: 8px;
  left: 50%;
  bottom: calc(100% + 12px);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2:before {
  content: '';
  position: absolute;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 6px solid;
  border-top-color: inherit;
  bottom: -5px;
}

.c3 {
  display: inline-block;
  max-width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 20px;
}

.c1 {
  position: relative;
  float: left;
  clear: left;
}

.c4 .rc-slider-handle {
  background-color: #1250C4;
}

.c4 .rc-slider-rail {
  background-color: #E5EDFC;
}

.c4 .rc-slider-track {
  background-color: rgba(137,170,231,0.5);
}

.c4 .rc-slider-handle:active,
.c4 .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(0,47,123,0.2),0px 6px 10px 0px rgba(0,47,123,0.14),0px 1px 18px 0px rgba(0,47,123,0.12);
}

.c4.rc-slider-disabled {
  background: none;
}

.c4.rc-slider-disabled .rc-slider-handle {
  background-color: #999999;
}

.c4.rc-slider-disabled .rc-slider-rail {
  background-color: #f2f2f2;
}

.c4.rc-slider-disabled .rc-slider-track {
  background-color: #e0e0e0;
}

.c4.rc-slider-disabled .rc-slider-handle:active,
.c4.rc-slider-disabled .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(153,153,153,0.2),0px 6px 10px 0px rgba(153,153,153,0.14),0px 1px 18px 0px rgba(153,153,153,0.12);
}

.c0 {
  width: 100%;
}

.c0 > div:first-child {
  left: 50%;
  top: -41px;
}

<div
  className="c0 c1"
  disabled={true}
  max={100}
  min={0}
  onChange={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  value={50}
>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      50
    </span>
  </div>
  <div
    className="rc-slider rc-slider-with-marks rc-slider-disabled c4"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="rc-slider-rail"
      style={
        Object {
          "height": 8,
        }
      }
    />
    <div
      className="rc-slider-track"
      style={
        Object {
          "height": 8,
          "left": "0%",
          "width": "50%",
        }
      }
    />
    <div
      className="rc-slider-step"
    >
      <span
        className="rc-slider-dot rc-slider-dot-active"
        style={
          Object {
            "display": "none",
            "left": "0%",
          }
        }
      />
      <span
        className="rc-slider-dot"
        style={
          Object {
            "display": "none",
            "left": "100%",
          }
        }
      />
    </div>
    <div
      aria-disabled={true}
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="rc-slider-handle"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="slider"
      style={
        Object {
          "borderWidth": 0,
          "height": 20,
          "left": "50%",
          "marginLeft": -9,
          "marginTop": -6,
          "width": 20,
        }
      }
      tabIndex={null}
    />
    <div
      className="rc-slider-mark"
    >
      <span
        className="rc-slider-mark-text rc-slider-mark-text-active"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": 0,
            "marginLeft": 0,
            "width": "auto",
          }
        }
      >
        0
      </span>
      <span
        className="rc-slider-mark-text"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": "unset",
            "marginLeft": 0,
            "right": 0,
            "width": "auto",
          }
        }
      >
        100
      </span>
    </div>
  </div>
</div>
`;

exports[`<Slider /> Snapshots should match the snapshot when have just one handle 1`] = `
.c2 {
  border-radius: 4px;
  font-weight: bold;
  opacity: 0;
  position: absolute;
  line-height: 0;
  text-align: center;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #424242;
  border-color: #424242;
  color: #f2f2f2;
  font-size: 16px;
  padding: 8px;
  left: 50%;
  bottom: calc(100% + 12px);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2:before {
  content: '';
  position: absolute;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 6px solid;
  border-top-color: inherit;
  bottom: -5px;
}

.c3 {
  display: inline-block;
  max-width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 20px;
}

.c1 {
  position: relative;
  float: left;
  clear: left;
}

.c4 .rc-slider-handle {
  background-color: #1250C4;
}

.c4 .rc-slider-rail {
  background-color: #E5EDFC;
}

.c4 .rc-slider-track {
  background-color: rgba(137,170,231,0.5);
}

.c4 .rc-slider-handle:active,
.c4 .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(0,47,123,0.2),0px 6px 10px 0px rgba(0,47,123,0.14),0px 1px 18px 0px rgba(0,47,123,0.12);
}

.c4.rc-slider-disabled {
  background: none;
}

.c4.rc-slider-disabled .rc-slider-handle {
  background-color: #999999;
}

.c4.rc-slider-disabled .rc-slider-rail {
  background-color: #f2f2f2;
}

.c4.rc-slider-disabled .rc-slider-track {
  background-color: #e0e0e0;
}

.c4.rc-slider-disabled .rc-slider-handle:active,
.c4.rc-slider-disabled .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(153,153,153,0.2),0px 6px 10px 0px rgba(153,153,153,0.14),0px 1px 18px 0px rgba(153,153,153,0.12);
}

.c0 {
  width: 100%;
}

.c0 > div:first-child {
  left: 10%;
  top: -41px;
}

<div
  className="c0 c1"
  disabled={false}
  max={100}
  min={0}
  onChange={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  value={10}
>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      10
    </span>
  </div>
  <div
    className="rc-slider rc-slider-with-marks c4"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="rc-slider-rail"
      style={
        Object {
          "height": 8,
        }
      }
    />
    <div
      className="rc-slider-track"
      style={
        Object {
          "height": 8,
          "left": "0%",
          "width": "10%",
        }
      }
    />
    <div
      className="rc-slider-step"
    >
      <span
        className="rc-slider-dot rc-slider-dot-active"
        style={
          Object {
            "display": "none",
            "left": "0%",
          }
        }
      />
      <span
        className="rc-slider-dot"
        style={
          Object {
            "display": "none",
            "left": "100%",
          }
        }
      />
    </div>
    <div
      aria-disabled={false}
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="rc-slider-handle"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="slider"
      style={
        Object {
          "borderWidth": 0,
          "height": 20,
          "left": "10%",
          "marginLeft": -9,
          "marginTop": -6,
          "width": 20,
        }
      }
      tabIndex={0}
    />
    <div
      className="rc-slider-mark"
    >
      <span
        className="rc-slider-mark-text rc-slider-mark-text-active"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": 0,
            "marginLeft": 0,
            "width": "auto",
          }
        }
      >
        0
      </span>
      <span
        className="rc-slider-mark-text"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": "unset",
            "marginLeft": 0,
            "right": 0,
            "width": "auto",
          }
        }
      >
        100
      </span>
    </div>
  </div>
</div>
`;

exports[`<Slider /> Snapshots should match the snapshot when have two handles 1`] = `
.c2 {
  border-radius: 4px;
  font-weight: bold;
  opacity: 0;
  position: absolute;
  line-height: 0;
  text-align: center;
  -webkit-transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out,visibility 0.2s ease-in-out;
  z-index: 100;
  background-color: #424242;
  border-color: #424242;
  color: #f2f2f2;
  font-size: 16px;
  padding: 8px;
  left: 50%;
  bottom: calc(100% + 12px);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2:before {
  content: '';
  position: absolute;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 6px solid;
  border-top-color: inherit;
  bottom: -5px;
}

.c3 {
  display: inline-block;
  max-width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 20px;
}

.c1 {
  position: relative;
  float: left;
  clear: left;
}

.c4 .rc-slider-handle {
  background-color: #1250C4;
}

.c4 .rc-slider-rail {
  background-color: #E5EDFC;
}

.c4 .rc-slider-track {
  background-color: rgba(137,170,231,0.5);
}

.c4 .rc-slider-handle:active,
.c4 .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(0,47,123,0.2),0px 6px 10px 0px rgba(0,47,123,0.14),0px 1px 18px 0px rgba(0,47,123,0.12);
}

.c4.rc-slider-disabled {
  background: none;
}

.c4.rc-slider-disabled .rc-slider-handle {
  background-color: #999999;
}

.c4.rc-slider-disabled .rc-slider-rail {
  background-color: #f2f2f2;
}

.c4.rc-slider-disabled .rc-slider-track {
  background-color: #e0e0e0;
}

.c4.rc-slider-disabled .rc-slider-handle:active,
.c4.rc-slider-disabled .rc-slider-handle:focus {
  border: none;
  box-shadow: 0px 3px 5px -1px rgba(153,153,153,0.2),0px 6px 10px 0px rgba(153,153,153,0.14),0px 1px 18px 0px rgba(153,153,153,0.12);
}

.c0 {
  width: 100%;
}

.c0 > div:first-child {
  left: 20%;
  top: -41px;
}

<div
  className="c0 c1"
  disabled={false}
  max={100}
  min={0}
  onChange={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  value={
    Object {
      "from": 10,
      "to": 30,
    }
  }
>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      10 to 30
    </span>
  </div>
  <div
    className="rc-slider rc-slider-with-marks c4"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="rc-slider-rail"
      style={
        Object {
          "height": 8,
        }
      }
    />
    <div
      className="rc-slider-track rc-slider-track-1"
      style={
        Object {
          "height": 8,
          "left": "10%",
          "width": "20%",
        }
      }
    />
    <div
      className="rc-slider-step"
    >
      <span
        className="rc-slider-dot"
        style={
          Object {
            "display": "none",
            "left": "0%",
          }
        }
      />
      <span
        className="rc-slider-dot"
        style={
          Object {
            "display": "none",
            "left": "100%",
          }
        }
      />
    </div>
    <div
      aria-disabled={false}
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="rc-slider-handle rc-slider-handle-1"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="slider"
      style={
        Object {
          "borderWidth": 0,
          "height": 20,
          "left": "10%",
          "marginLeft": -9,
          "marginTop": -6,
          "width": 20,
        }
      }
      tabIndex={0}
    />
    <div
      aria-disabled={false}
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={30}
      className="rc-slider-handle rc-slider-handle-2"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="slider"
      style={
        Object {
          "borderWidth": 0,
          "height": 20,
          "left": "30%",
          "marginLeft": -9,
          "marginTop": -6,
          "width": 20,
        }
      }
      tabIndex={0}
    />
    <div
      className="rc-slider-mark"
    >
      <span
        className="rc-slider-mark-text"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": 0,
            "marginLeft": 0,
            "width": "auto",
          }
        }
      >
        0
      </span>
      <span
        className="rc-slider-mark-text"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": 16,
            "left": "unset",
            "marginLeft": 0,
            "right": 0,
            "width": "auto",
          }
        }
      >
        100
      </span>
    </div>
  </div>
</div>
`;
